--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Shirley Zhang"
-  avatar           : "shirley_headshot.png"
+  avatar           : "shirley_headshot.jpg"
   bio              : "CS PhD student at Harvard University"
   location         : "Boston, Massachusetts"
   employer         :
