--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : # "http://yourfullgooglescholarurl.com"
-  email            :
+  email            : # szhang2 [at] g [dot] harvard [dot] edu
   researchgate     :  
   uri              :
   bitbucket        :
